# lactanet_extraction

./: .gitignore  build_exe.ps1  main.py  pyproject.toml  requirements.txt
config/: logging.py
utils/: extraction.py  input_processing.py  last_gen.py  scraping.py  special_case.py  utils.py
